@@ -1,3 +1,7 @@
+2015-06-22 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* index.php: added News - sdcc 3.5.0 RC2
+
 2015-06-09 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* index.php: added News - sdcc 3.5.0 RC1
